tests/NormalTests/paczka1/small_fuzzy/36506570.err
Error in line 2: lxONw7TfdRc S848 89,4
Error in line 7: xv6rFM5okOq A715 77,1
Error in line 10: D9yh7NCcBwc S848 72,7
Error in line 9: xv6rFM5okOq S920 28,5
